// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationPage useApplicationRoles error shows error notification 1`] = `
<Page
  className="makeStyles-root-1"
  notification={
    Object {
      "messages": "Oops, we're having trouble obtaining your applications. Please try again later.",
      "type": "error",
    }
  }
  title="My Applications"
>
  <div
    className="makeStyles-section-2"
  >
    <ForwardRef(WithStyles)
      variant="h3"
    >
      Active Applications
    </ForwardRef(WithStyles)>
  </div>
  <div
    className="makeStyles-section-2"
  >
    <ForwardRef(render)>
      Past Applications
    </ForwardRef(render)>
  </div>
</Page>
`;

exports[`ApplicationPage useApplicationRoles success with application shows active and past application sections 1`] = `
<Page
  className="makeStyles-root-1"
  title="My Applications"
>
  <div
    className="makeStyles-section-2"
  >
    <ForwardRef(WithStyles)
      variant="h3"
    >
      Active Applications
    </ForwardRef(WithStyles)>
    <Application
      application={
        Object {
          "status": 5,
        }
      }
      isActive={true}
      role={10}
    />
  </div>
  <div
    className="makeStyles-section-2"
  >
    <ForwardRef(render)>
      Past Applications
    </ForwardRef(render)>
    <Application
      application={
        Object {
          "status": 25,
        }
      }
      isActive={false}
      role={20}
    />
  </div>
</Page>
`;

exports[`ApplicationPage useApplicationRoles success without application shows sections with empty copy 1`] = `
<Page
  className="makeStyles-root-1"
  title="My Applications"
>
  <div
    className="makeStyles-section-2"
  >
    <ForwardRef(WithStyles)
      variant="h3"
    >
      Active Applications
    </ForwardRef(WithStyles)>
    <ForwardRef(WithStyles)
      variant="h4"
    >
      You don't have any active applications.
    </ForwardRef(WithStyles)>
  </div>
  <div
    className="makeStyles-section-2"
  >
    <ForwardRef(render)>
      Past Applications
    </ForwardRef(render)>
    <ForwardRef(WithStyles)
      variant="h4"
    >
      You don't have any past applications.
    </ForwardRef(WithStyles)>
  </div>
</Page>
`;
